--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "Action",
     "start_url": "/index.html",
     "display": "standalone",
-    "background_color": "f7f8fa",
+    "background-color": "#f7f8fa",
     "theme_color": "#151633",
     "icons": [
           {
@@ -17,11 +17,11 @@
           },
           {
             "src": "icon/Action-logo-ico.ico",
-            "sizes": "72x72 96x96 128x128 256x256"
+            "sizes": "72x72 96x96 128x128 192x192 256x256 512x512"
           },
           {
             "src": "icon/Action-logo.png",
-            "sizes": "72x72 96x96 128x128 256x256"
+            "sizes": "72x72 96x96 128x128  192x192 256x256 512x512"
           },
           {
             "src": "icon/Action-logo-svg.svg",
