--- a/manifest.json
+++ b/manifest.json
@@ -1,56 +1,50 @@
 {
-    "name": "Action App",
-    "short_name": "Action",
-    "start_url": "/index.html",
-    "display": "standalone",
-    "background-color": "#ffffff",
-    "theme_color": "#000000",
-    "icons": [
-          {
-            "src": "images/Action-logo-webp.webp",
-            "sizes": "48x48px",
-            "type": "image/webp"
-          },
-          {
-            "src": "images/Action-logo-lowres.png",
-            "sizes": "48x48px"
-          },
-          {
-            "src": "images/Action-logo-ico.ico",
-            "sizes": "72x72px 96x96px 128x128px 192x192px 256x256px 512x512px"
-          },
-          {
-            "src": "images/Action-logo.png",
-            "sizes": "72x72px 96x96px 128x128px 192x192px 256x256px 512x512px"
-          },
-          {
-            "src": "images/Action-logo-svg.svg",
-            "sizes": "any"
-          }
-        ]
-   
-"screenshots": [
-  {
+  "name": "Action App",
+  "short_name": "Action",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "images/Action-logo-webp.webp",
+      "sizes": "48x48",
+      "type": "image/webp"
+    },
+    {
+      "src": "images/Action-logo-lowres.png",
+      "sizes": "48x48"
+    },
+    {
+      "src": "images/Action-logo-ico.ico",
+      "sizes": "72x72 96x96 128x128 192x192 256x256 512x512"
+    },
+    {
+      "src": "images/Action-logo.png",
+      "sizes": "72x72 96x96 128x128 192x192 256x256 512x512"
+    },
+    {
+      "src": "images/Action-logo-svg.svg",
+      "sizes": "any"
+    }
+  ],
+  "screenshots": [
+    {
       "src": "/images/screenshot3.webp",
-    "sizes": "1280x720",
-    "type": "image/webp"
-  }
-]
-
-"screenshots": [
-  {
+      "sizes": "1280x720",
+      "type": "image/webp"
+    },
+    {
       "src": "/images/screenshot2.webp",
-    "sizes": "1280x720",
-    "type": "image/webp",
-    "form_factor": "wide",
-    "label": "Home screen showing main navigation and featured content"
-  },
-  {
+      "sizes": "1280x720",
+      "type": "image/webp",
+      "label": "Home screen showing main navigation and featured content"
+    },
+    {
       "src": "/images/screenshot1.webp",
-    "sizes": "1280x720",
-    "type": "image/webp",
-    "platform": "ios",
-    "label": "Dashboard view displaying key metrics"
-  }
-]
+      "sizes": "1280x720",
+      "type": "image/webp",
+      "label": "Dashboard view displaying key metrics"
+    }
+  ]
 }
